--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -30,8 +30,8 @@
                     <div class="inner-box">
                         <span data-toggle="counter-up">100</span>
                         <span class="sign">+</span>
-                        <h3> PANELS
-                            <br /> INSTALLED</h3>
+                        <p> PANELS
+                            <br /> INSTALLED</p>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                 and businesses, while contributing to reduce global pollution and carbon footprints. It is our duty to give
                 extraordinary consumer loyalty and administration in each part of your solar energy investment.
             </p>
-            <h5>Why People Choose Us</h5>
+            <h3>Why Choose Greensource Solar</h3>
             <ul>
                 <i class="fas fa-check"></i><li>There are complexities that not many solar installers know about</li>
                 <i class="fas fa-check"></i><li>Our Installations are without shortcuts and completely detailed</li>
@@ -58,7 +58,7 @@
 <section>
     <div class="container-fluid padding">
         <div class="service col-12">
-            <h5>Our Values</h5>
+            <p class="head">Our Values</p>
             <hr />
             <p>Building structure for sustainability</p>
         </div>
@@ -67,14 +67,14 @@
         <div class="mission owl-carousel owl-theme" id="vision">
             <div class="item">
             <div class="vision">
-                <h4>Mission</h4>
+                <span>Mission</span>
                 <p>Our mission is to promote renewable energy technologies,
                 energy efficiency and sustainable energy that benefits everyone.</p>
             </div>
             </div>
             <div class="item">
             <div class="vision">
-                <h4>Core Values</h4>
+                <span>Core Values</span>
                 <ul class="create">
                     <li>Customer Centric</li>
                     <li>Reliability</li>
@@ -87,7 +87,7 @@
             </div>
             <div class="item">
             <div class="vision">
-                <h4>Vision</h4>
+                <span>Vision</span>
                 <p>Our vision is to build a sustainable energy future, providing solutions to manage energy and environmental
                     sustainability</p>
             </div>
@@ -98,28 +98,28 @@
 <section>
 <div class="container-fluid padding">
     <div class="service-two col-12">
-        <h5><i class="fas fa-long-arrow-alt-right"></i>How We Work</h5>
+        <p class="head"><i class="fas fa-long-arrow-alt-right"></i>How We Work</p>
         <p>Our Work Flow Process</p>
     </div>
     <div class="row work-mode padding">
         <div class="working col-xs-12 col-md-6 col-lg-3">
-            <h5>1</h5>
-                <h4>Site Visit</h4>
+            <span>1</span>
+                <h4>Site Assessment</h4>
                 <p>We visit site to determine the solar resource availability and constraints to installation</p>   
         </div>
         <div class="working col-xs-12 col-md-6 col-lg-3">
-            <h5>2</h5>
-                <h4>Analysis</h4>
+            <span>2</span>
+                <h4>Energy Analysis</h4>
                 <p>we carry out load analysis to dertermine the best solar option that fits individual clients</p>
         </div>
         <div class="working col-xs-12 col-md-6 col-lg-3">
-            <h5>3</h5>
-                <h4>Design</h4>
+            <span>3</span>
+                <h4>Solar Design</h4>
                 <p>After analysis, we determine all solar components that will be suitable for the design</p>
         </div>
         <div class="working col-xs-12 col-md-6 col-lg-3">
-            <h5>4</h5>
-                <h4>Installation</h4>
+            <span>4</span>
+                <h4>Solar Installation</h4>
                 <p>We implement the designs with standard operational procedures with safety of clients in mind</p>
         </div>
     </div>
@@ -129,7 +129,7 @@
     <div class="container-fluid padding">
         <div class="row benefits padding">
             <div class="service col-12">
-                <h5>Great Results Guaranteed</h5>
+                <p class="head">Great Results Guaranteed</hp>
                 <hr />
                 <p>What we are able to help you with</p>
             </div>
@@ -459,7 +459,7 @@
 <section>
     <div class="container-fluid padding">
         <div class="service-two col-12">
-            <h5><i class="fas fa-long-arrow-alt-right"></i>Greensource Team</h5>
+            <p class="head"><i class="fas fa-long-arrow-alt-right"></i>Greensource Team</p>
             <p>Greensource is run by awesome people</p>
         </div>
         <div class="container padding">
@@ -468,7 +468,7 @@
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="1.2s" data-wow-offset="10">
                     <img src="{% static 'images/ceo.webp' %}" alt="C.E.O" />
                     <div class="team-text">
-                        <h5>Olumide Joseph</h5>
+                        <span>Olumide Joseph</span>
                         <p>Founder/CEO</p>
                     </div>
                 </div>
@@ -477,7 +477,7 @@
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
                     <img src="{% static 'images/onifade.webp' %}" alt="Marketing Lead" />
                     <div class="team-text">
-                        <h5>Onifade Dolapo</h5>
+                        <span>Onifade Dolapo</span>
                         <p>Social Media</p>
                     </div>
                 </div>
@@ -486,7 +486,7 @@
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
                     <img src="{% static 'images/tola.webp' %}" alt="Lead Engineer" /> 
                     <div class="team-text">
-                        <h5>Adeyemi Tola</h5>
+                        <span>Adeyemi Tola</span>
                         <p>Installer</p>
                     </div>
                 </div>
