--- a/greensource_pages/templates/greensource_pages/our-team.html
+++ b/greensource_pages/templates/greensource_pages/our-team.html
@@ -74,19 +74,10 @@
                 <p>Devops/Tech</p>
             </div>
         </div>
-        <!-- <div class="member-box member-6">
-            <div class="member-img">
-                <img src="images/t6-a.jpg">
-            </div>
-            <div class="member-name">
-                <span>Iyanu Oluwa</span>
-                <p>PV Engineer</p>
-            </div>
-        </div> -->
         <div class="detail-box-1">
             <div class="member-detail-box">  
                 <div class="detail-box-img">
-                    <img src="{% static 'images/' %}" alt="CEO">
+                    <img src="{% static 'images/ceo.webp' %}" alt="CEO">
                 </div>
                 <div class="detail-box-text"> 
                     <a href="javascript:void(0);" class="cancel">
@@ -140,7 +131,7 @@
         <div class="detail-box-3">
             <div class="member-detail-box">
                 <div class="detail-box-img">
-                    <img src="{% static 'images/' %}" alt="Engineer">
+                    <img src="{% static 'images/tola.webp' %}" alt="Engineer">
                 </div>
                 <div class="detail-box-text">
                     <a href="javascript:void(0);" class="cancel">
@@ -218,33 +209,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="detail-box-6">
-            <div class="member-detail-box">
-                <div class="detail-box-img">
-                    <img src="{% static 'images/engineer.png'  %}">
-                </div>
-                <div class="detail-box-text">
-                    <a href="javascript:void(0);" class="cancel">
-                        <i class="fas fa-times"></i>
-                    </a>
-                    <h4 class="detail-name">Iyanu Oluwa</h4>
-                    <div class="member-social-links">
-                        <a href="#">
-                            <i class="fas fa-caret-down"></i>
-                        </a>
-                        <a href="#">
-                            <i class="fas fa-caret-down"></i>
-                        </a>
-                    </div>
-                    <h5 class="position">Position: PV Engineer</h5>
-                    <p>The guy who pulls all the strings in making all your ideas come to live! If he says, its possible - it's
-                        possible. He's very dependable, energetic, humourous and passionate. A certified fullstack developer of Decagon Institute. Loves leading projects with
-                        full stack development skills on the side. Share your ideas with him and he will make it happen.
-                    </p>
-                    <a href="#" class="view-work-btn">View Profile</a>
-                </div>
-            </div>
-        </div> -->
     </div>
 </section>
 {% endblock %}
