--- a/greensource_pages/templates/greensource_pages/services.html
+++ b/greensource_pages/templates/greensource_pages/services.html
@@ -30,7 +30,7 @@
                             <div class="block">
                                 <i class="fas fa-solar-panel"></i>
                             </div>
-                            <h3><a href="{% url 'solar_design' %}">Design/Installation</a></h3>
+                            <h3><a href="{% url 'solar_design' %}">Solar Installation</a></h3>
                             <p>We leverage on our expertise and experience to deliver cost-effective long...</p>
                             <a href="{% url 'solar_design' %}" class="read-more">Read More</a>
                         </div>
@@ -42,7 +42,7 @@
                             <div class="block">
                                     <i class="far fa-lightbulb"></i>
                             </div>
-                            <h3><a href="{% url 'electrical_design' %}">Street Lighting</a></h3>
+                            <h3><a href="{% url 'electrical_design' %}">Solar Lighting</a></h3>
                             <p>We design and install solar lights for houses, offices, neighborhoods, and market ...</p>
                             <a href="{% url 'electrical_design' %}" class="read-more">Read More</a>
                         </div>
@@ -54,7 +54,7 @@
                             <div class="block">
                                     <i class="fas fa-car-battery"></i>
                             </div>
-                            <h3><a href="{% url 'energy_management' %}">Energy Storage</a></h3>
+                            <h3><a href="{% url 'energy_management' %}">PV Storage</a></h3>
                             <p>We build energy storage for solar energy systems, which is important for ensuring ...</p>
                             <a href="{% url 'energy_management' %}" class="read-more">Read More</a>
                         </div>
@@ -66,7 +66,7 @@
                                 <div class="block">
                                         <i class="fas fa-tasks"></i>
                                 </div>
-                                <h3><a href="{% url 'project_management' %}">Project Development</a></h3>
+                                <h3><a href="{% url 'project_management' %}">PV Development</a></h3>
                                 <p>Your home/business energy usage and GHG emissions can be minimized with the ...</p>
                                 <a href="{% url 'project_management' %}" class="read-more">Read More</a>
                             </div>
@@ -90,7 +90,7 @@
                                 <div class="block">
                                         <i class="fas fa-tools"></i>
                                 </div>
-                                <h3><a href="{% url 'maintenance_service' %}">System Maintenance</a></h3>
+                                <h3><a href="{% url 'maintenance_service' %}">Solar Maintenance</a></h3>
                                 <p>Solar Energy Systems should and must be maintained even though they are fairly passive...</p>
                                 <a href="{% url 'maintenance_service' %}" class="read-more">Read More</a>
                             </div>
