--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -22,7 +22,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/homepage2.webp' %}" alt="array of ground mounted solar panels" />
+                <img src="{% static 'images/homepage2.webp' %}" alt="array of ground mounted solar panels">
                 <div class="carousel-caption">
                     <h2 class="animated zoomIn">Cost effective
                         <span>Solar </span>Solution</h2>
@@ -384,8 +384,8 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
             </div>
             <div class="faq col-lg-6 col-md-6 col-xs-12">
                 <div class="service-three col-12">
-                    <h4>
-                        <i class="fas fa-long-arrow-alt-right"></i>Frequently Asked Questions</h4>
+                    <p class="head">
+                        <i class="fas fa-long-arrow-alt-right"></i>Frequently Asked Questions</p>
                     <p>Knowledge base</p>
                 </div>
                 <div id="accordion" class="container padding">
@@ -461,7 +461,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
 </section>
 <section class="video-block-style-one text-center">
     <div class="container">
-        <a href="#" class="video-popup">
+        <a href="#" class="video-popup" aria-label="play icon button">
             <i class="fa fa-play"></i>
         </a>
         <p>We are Building the Future
@@ -471,7 +471,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
 <section>
     <div class="container padding">
         <div class="service col-12">
-            <h5>Testimonials</h5>
+            <p class="head">Testimonials</p>
             <hr />
             <p>What our clients are saying</p>
         </div>
@@ -491,7 +491,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                 </div>
                 <div class="col-lg-6">
                     <div class="testimonials-style-three-carousel-wrapper">
-                        <div class="owl-theme owl-carousel testimonials-style-three-carousel" id="testimonial">
+                        <div class="owl-theme owl-carousel testimonials-style-three-carousel" id="testimonial" aria-label="testimonial buttons">
                             <div class="single-testimonial-style-three">
                                 <i class="fas fa-quote-right"></i>
                                 <p>It's been a year now and my shop as been a center of attraction to customers due to uninterrupted
@@ -545,13 +545,13 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
 <section>
     <div class="container-fluid padding">
         <div class="service-two col-12">
-            <h5>
-                <i class="fas fa-long-arrow-alt-right"></i>Our Services</h5>
+            <p class="head">
+                <i class="fas fa-long-arrow-alt-right"></i>Our Services</p>
             <p>Our range of solar installation</p>
         </div>
     </div>
     <div class="container padding">
-        <div class="owl-carousel owl-theme service-style-one" id="services">
+        <div class="owl-carousel owl-theme service-style-one" id="services" aria-label="services rendered">
             <div class="item">
                 <div class="single-service-style-three">
                     <div class="text-block">
@@ -559,7 +559,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                             <i class="fas fa-solar-panel"></i>
                         </div>
                         <h3>
-                            <a href="{% url 'solar_design' %}">Design/Installation</a>
+                            <a href="{% url 'solar_design' %}">Solar Installation</a>
                         </h3>
                         <p>We leverage on our expertise and experience to deliver cost-effective long...</p>
                         <a href="{% url 'solar_design' %}" class="read-more">Read More</a>
@@ -573,7 +573,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                             <i class="far fa-lightbulb"></i>
                         </div>
                         <h3>
-                            <a href="{% url 'electrical_design' %}">Street Lighting</a>
+                            <a href="{% url 'electrical_design' %}">Solar Lighting</a>
                         </h3>
                         <p>We design and install solar lights for houses, offices, neighborhoods, and...</p>
                         <a href="{% url 'electrical_design' %}" class="read-more">Read More</a>
@@ -587,7 +587,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                             <i class="fas fa-car-battery"></i>
                         </div>
                         <h3>
-                            <a href="{% url 'energy_management' %}">Energy Storage</a>
+                            <a href="{% url 'energy_management' %}">PV Storage</a>
                         </h3>
                         <p>We build energy storage for solar energy systems, which is important for ensuring ...</p>
                         <a href="{% url 'energy_management' %}" class="read-more">Read More</a>
@@ -601,7 +601,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                             <i class="fas fa-tasks"></i>
                         </div>
                         <h3>
-                            <a href="{% url 'project_management' %}">Project Development</a>
+                            <a href="{% url 'project_management' %}">Solar Development</a>
                         </h3>
                         <p>Your home/business energy usage and GHG emissions can be minimized with the ...</p>
                         <a href="{% url 'project_management' %}" class="read-more">Read More</a>
@@ -629,7 +629,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                             <i class="fas fa-tools"></i>
                         </div>
                         <h3>
-                            <a href="{% url 'maintenance_service' %}">System Maintenance</a>
+                            <a href="{% url 'maintenance_service' %}">Solar Maintenance</a>
                         </h3>
                         <p>Solar Energy Systems should and must be maintained even though they are fairly...</p>
                         <a href="{% url 'maintenance_service' %}" class="read-more">Read More</a>
@@ -643,13 +643,13 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
     <div class="container-fluid padding">
         <div class="hp-project row padding">
             <div class="service col-12">
-                <h5>Featured Projects</h5>
+                <p class="head">Featured Projects</p>
                 <hr />
                 <p>Some of our site installations</p>
             </div>
             <div class="featured-project col-12">
                 {% for featured in index %}
-                <a href="{{ featured.pics.url }}">
+                <a href="{{ featured.pics.url }}" aria-label="featured project images">
                     <amp-img src="{{ featured.pics.url }}" alt="awesome image" width="300" height="300"></amp-img>
                 </a>
                 {% endfor %}
@@ -662,13 +662,13 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
 <section>
     <div class="container-fluid padding">
         <div class="service-two col-12">
-            <h5>
-                <i class="fas fa-long-arrow-alt-right"></i>Pricing Plans</h5>
+            <p class="head">
+                <i class="fas fa-long-arrow-alt-right"></i>Pricing Plans</p>
             <p>Explore from our tailored options</p>
         </div>
     </div>
     <div class="container padding">
-        <div class="pricing-table owl-carousel owl-theme" id="pricing">
+        <div class="pricing-table owl-carousel owl-theme" id="pricing" aria-label="pricing packages">
             <div class="item">
                 <div class="table">
                     <h5>300wp - solar</h5>
@@ -754,7 +754,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
 <section>
     <div class="container-fluid padding">
         <div class="service col-12">
-            <h5>Our Blog</h5>
+            <p class="head">Our Blog</p>
             <hr />
             <p>Stay up to date with the latest news</p>
         </div>
@@ -776,12 +776,12 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
 <section>
     <div class="container-fluid padding">
         <div class="service-two col-12 padding">
-            <h5>
-                <i class="fas fa-long-arrow-alt-right"></i>Our Partners</h5>
+            <p class="head">
+                <i class="fas fa-long-arrow-alt-right"></i>Our Partners</p>
             <p>Our trusted brands</p>
         </div>
         <div class="brand-carousel-wrapper">
-            <div class="brand-carousel-one owl-theme owl-carousel">
+            <div class="brand-carousel-one owl-theme owl-carousel" aria-label="brand partners logo">
                 <div class="item">
                     <amp-img src="{% static 'images/brand-1-1.webp' %}" alt="sona logo" width = "200"
                     height = "100" noloading></amp-img>
