--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -9,8 +9,7 @@
     <meta http-equiv = "content-language" content = "en">
     <meta name="revisit-after" content="2 days" />
     <meta name="description" content="Need a cost effective and reliable Solar Home System for your Home or Business? We will design / install a custom system that fits your energy requirement!"/>
-    <meta name="keywords" content="solar street light installer in mowe-ofada ibafo obafemi owode Ogun, solar street light installer in lagos,  solar, solar panel installer in ibafo mowe-ofada obafemi owode, solar panel maintenance, solar panels design solar Photovoltaic, PV maintenance, PV storage, solar energy, solar, solar inverter, solar home systems, solar energy websites, solar street light, 
-    solar home system installer in mowe-ofada, Inverter installer near me, solar lighting system, renewable energy, solar company in mowe-ofada Ogun state, solar company in mowe-ibafo Ogun state, solar company in Ofada Ogun state, green energy, energy sources, alternative energy"/>
+    <meta name="keywords" content="solar company, solar energy, solar providers near me, solar installers near me, renewable energy, solar companies near me, solar solutions, solar panel companies, solar power companies, top solar companies, solar panel companies near me, affordable solar, go green solar, solar installation company, solar energy solutions, solar panel distributor, Solar business, solar panel suppliers, solar pv system, solar module, best solar panels, best portable solar panels, off grid solar installers near me, residential solar installers near me, solar panel cost near me, home solar companies near me, clean solar panels, solar energy questions, solar energy advantages" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="greensourcenergy.com" />
     <meta name="twitter:creator" content="@greenn_energy" />
